--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,7 +1,7 @@
 - const btnStyles = `btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg`;
 
 nav(class=`flex flex-wrap content-start mt-20 mx-auto`)
-  a(href="index" class=`${btnStyles} ${homeActive}` type=`button`) Home
+  a(href="home" class=`${btnStyles} ${homeActive}` type=`button`) Home
   a(href="projects" class=`${btnStyles} ${projectActive}` type=`button`) Projects
   a(href="skills" class=`${btnStyles} ${skillsActive}` type=`button`) Skills
   a(href="about" class=`${btnStyles} ${aboutActive}` type=`button`) About
