--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -1,11 +1,64 @@
-@import "./buttonStyles";
-
 dt {
   padding-top: 0.5%;
 }
 
 nav {
   z-index: 0;
+}
+
+// ====================================================
+// Nav menu button styles
+// ====================================================
+// Colors //
+$color: #5533ff;
+$color2: #38e2ee;
+$deeper: darken($color, 5%);
+$lighter: lighten($color2, 10%);
+
+// Shadows //
+@mixin box_shadow ($level) {
+    @if $level == 0 {
+        box-shadow: none;
+    }
+
+  @else if $level == 1 {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  @else if $level == 2 {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
+
+  @else if $level == 3 {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  }
+
+  @else if $level == 4 {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+
+  @else if $level == 5 {
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  }
+
+}
+
+// Button specific styles
+.btn_nav {
+    background: #151e3d;
+    box-shadow: 0px 0px 0px 5px rgba(white ,0.95);
+    border: 0.5px solid white;
+    transition: .3s all ease-in-out;
+    
+    &:hover {
+        background: #59788e;
+        box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
+    }
+    &.active {
+      background: #59788e;
+      box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
+    }
+
 }
 
 // ====================================================
@@ -216,7 +269,7 @@ ul.transition li {
 // media queries
 // ====================================================
 // desktop
-@media (min-width: 751px) {
+@media (min-width: 1201px) {
   #overlay {
     visibility: hidden;
     display: none;
@@ -229,17 +282,47 @@ ul.transition li {
 }
 
 // mobile
-@media (max-width: 750px) {
+@media (max-width: 1200px) {
+  
+  // overall styles
   main {
     display: flex;
     position: relative;
     z-index: 3;
   }
 
+  .text {
+    &-4xl {
+      font-size: 6vw;
+      margin-top: 5rem;
+    }
+    &-3xl {
+      font-size: 4vw;
+      margin-top: 5rem;
+    }
+    &-2xl {
+      font-size: 3vw;
+    }
+    &-xl {
+      font-size: 4vw;
+    }
+  }
+
+  .font-normal {
+    font-size: 2vw;
+  }
+
+  p {
+    font-size: 3vw;
+  }
+
+  dl {
+    font-size: 3vw;
+  }  
+
   // homepage introduction div
   .introduction {
-    margin-top: 40%;
-    font-size: 250%;
+    margin-top: 50%;
   }
 
   // wrappers on every page
@@ -309,7 +392,7 @@ ul.transition li {
 
   // **** Media queries for about page
   .aboutBG {
-    height: 60rem;
+    height: 100vh;
   }
 
   .aboutHeader {
@@ -319,6 +402,7 @@ ul.transition li {
 
   .bg-local {
     left: auto;
+    bottom: -50%;
     right: -5%;
   }
 
