--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -16,49 +16,37 @@ $deeper: darken($color, 5%);
 $lighter: lighten($color2, 10%);
 
 // Shadows //
-@mixin box_shadow ($level) {
-    @if $level == 0 {
-        box-shadow: none;
-    }
-
-  @else if $level == 1 {
+@mixin box_shadow($level) {
+  @if $level == 0 {
+    box-shadow: none;
+  } @else if $level == 1 {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  }
-
-  @else if $level == 2 {
+  } @else if $level == 2 {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  @else if $level == 3 {
+  } @else if $level == 3 {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  @else if $level == 4 {
+  } @else if $level == 4 {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  }
-
-  @else if $level == 5 {
+  } @else if $level == 5 {
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   }
-
 }
 
 // Button specific styles
 .btn_nav {
-    background: #151e3d;
-    box-shadow: 0px 0px 0px 5px rgba(white ,0.95);
-    border: 0.5px solid white;
-    transition: .3s all ease-in-out;
-    
-    &:hover {
-        background: #59788e;
-        box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
-    }
-    &.active {
-      background: #59788e;
-      box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
-    }
+  background: #151e3d;
+  box-shadow: 0px 0px 0px 5px rgba(white, 0.95);
+  border: 0.5px solid white;
+  transition: 0.3s all ease-in-out;
 
+  &:hover {
+    background: #59788e;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.85);
+  }
+  &.active {
+    background: #59788e;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.85);
+  }
 }
 
 // ====================================================
@@ -279,11 +267,14 @@ ul.transition li {
     visibility: visible;
     display: none;
   }
+
+  .socialButtons {
+    visibility: hidden;
+  }
 }
 
 // mobile
 @media (max-width: 1200px) {
-  
   // overall styles
   main {
     display: flex;
@@ -297,7 +288,7 @@ ul.transition li {
       margin-top: 5rem;
     }
     &-3xl {
-      font-size: 4vw;
+      font-size: 3.5vw;
       margin-top: 5rem;
     }
     &-2xl {
@@ -318,7 +309,11 @@ ul.transition li {
 
   dl {
     font-size: 3vw;
-  }  
+  }
+
+  // mobile nav menu
+  #overlay ul {
+  }
 
   // homepage introduction div
   .introduction {
@@ -415,22 +410,98 @@ ul.transition li {
   // **** Media queries for contact page
 
   .contactBG {
-    height: 75rem;
+    height: 100vh;
   }
 
   iframe {
     position: relative;
     top: 5rem;
+    width: 70vw;
   }
 
   .contactButtons {
-    position: relative;
-    left: 20%;
-    right: 20%;
-    top: 8rem;
+    visibility: hidden;
   }
 
   .contactContents {
     top: auto;
+  }
+
+  // social media buttons styles
+  .socialButtons {
+    visibility: visible;
+    display: inline-block;
+    position: relative;
+    top: 27%;
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  // social media buttons: icons
+  .mobile {
+    color: #4c51bf;;
+    bottom: 1rem;
+    background: #fff;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+    padding-top: 0.5rem;
+    margin: 0 2px;
+    -o-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-font-smoothing: antialiased;
+
+    //  hover bg color
+    &:hover {
+      background: #ef92a3;
+    }
+
+    //  txt pops up when icon is in hover state
+    &:hover span {
+      bottom: 50px;
+      visibility: visible;
+      opacity: 1;
+    }
+
+    //  pop-up text
+    span {
+      color: #666;
+      position: absolute;
+      font-family: sans-serif;
+      bottom: 0;
+      left: -25px;
+      right: -25px;
+      padding: 5px 7px;
+      z-index: -1;
+      font-size: 14px;
+      border-radius: 2px;
+      background: #fff;
+      visibility: hidden;
+      opacity: 0;
+      -o-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      -moz-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+      // pop-up text arrow
+      &:before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 5px solid #fff;
+        position: absolute;
+        bottom: -5px;
+        left: 40px;
+      }
+    }
   }
 }
